2026-01-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-message.el (tramp-debug-message): Change selection for
	`trace-function-background'.

2026-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-names): New defvar.
	(tramp-local-host-regexp): Use it.

	* tramp-adb.el:
	* tramp-androidsu.el:
	* tramp-integration.el:
	* tramp-smb.el: Do not delay `connection-local-set-profiles' until
	after loading `shell'.

	* tramp-integration.el: Add the local profile for all hosts listed
	in `tramp-local-host-names'.

2026-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.
	(tramp-barf-if-file-missing)
	(with-parsed-tramp-file-name): Adapt debug spec.
	(tramp-skeleton-copy-directory): Flush directory properties.
	(tramp-add-hops): Check for `tramp-login-args' property.

	* tramp-sh.el (tramp-sh-handle-copy-directory): Check for
	`tramp-method-out-of-band-p' explicitly. Don't flush directory
	properties.
	(tramp-method-out-of-band-p): There shouldn't be a multi-hop.

	* tramp-smb.el (tramp-smb-handle-copy-directory): Don't flush directory
	properties.

2026-01-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-get-ls-command): Prefer gnuls over ls.
	(tramp-get-remote-readlink): Prefer gnureadlink over readlink.
	(Bug#79956, Bug#80075)

2026-01-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-file-name-all-completions):
	Keep `tramp-default-method{-alist}' in order to get completion
	functions for `tramp-default-method-marker'.

2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-do-ls): New function.
	(tramp-adb-handle-file-attributes)
	(tramp-adb-handle-directory-files-and-attributes)
	(tramp-adb-handle-file-name-all-completions): Use it.  (Bug#80054)

2025-12-20  Michael Albinus  <michael.albinus@gmx.de>
